# eventi

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
.github/workflows/: run-tests.yml
include/eventi/: Callback_ref.h  Event.h  Exceptions.h  IEvent.h  Scoped_callbacks.h  Scoped_defer.h  Scoped_disable.h
src/: Callback_ref.cpp  Exceptions.cpp  Scoped_callbacks.cpp  Scoped_defer.cpp  Scoped_disable.cpp
tests/: CMakeLists.txt  Callback_ref_test.cpp  Event_test.cpp  Scoped_callbacks_test.cpp  Scoped_defer_test.cpp  Scoped_disable_test.cpp
